openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"py-basic:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"py-basic\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: py-basic
    app.kubernetes.io/component: py-basic
    app.kubernetes.io/instance: py-basic
  name: py-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: py-basic
  strategy: {}
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      labels:
        deployment: py-basic
    spec:
      containers:
        - env:
            - name: name
              value: py
          image: ' '
          name: py-basic
          ports:
            - containerPort: 8000
              protocol: TCP
          resources: {}
