openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: py-basic
    app.kubernetes.io/component: py-basic
    app.kubernetes.io/instance: py-basic
  name: py-basic
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deployment: py-basic
