openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: py-basic
    app.kubernetes.io/instance: py-basic
  name: py-basic
spec:
  host: py-basic-s2i-py.apps-crc.testing
  port:
    targetPort: 8080
  to:
    kind: Service
    name: py-basic
